--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
     </div>
 
     <div class="d-flex align-items-end flex-column" style="height: 200px;">
-      <div class="p-2">Flex item</div>
-      <div class="p-2">Flex item</div>
-      <div class="mt-auto p-2">Flex item</div>
+      <div class="p-2">&copy; 2020 elentless.ca </div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
