--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body>
 
     <div id="mainContent" class="container">
-      <div class="row logoContainer mx-auto">
+      <div class="row logoContainer">
         <div class="col">
-          <img class="img-responsive" src="img/logo.png" alt="Elentless">
+          <img class="img-fluid mx-auto d-block" src="img/logo.png" alt="Elentless">
 
         </div>
       </div>
